# c-codebase

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  Makefile_generic  README.md  linked-list.c
include/sergio/: vector.h
linked-list/: linked-list
src/: linked-list.c  macros.c  macros.h  main.c  quicksort.c  quicksort.h  red-black-tree.c  red-black-tree.h  stack.c  stack.h  vector.c  vector.h
src/lib/: stack.c
src/network/: server.c  talker.c
